--- a/elements.html
+++ b/elements.html
@@ -56,6 +56,7 @@
 						<p>•	EC2<br>
 							•	S3<br>
 							•	ECR<br>
+							•	ECS<br>
 							•	QuickSight<br>
 							</p>
 						<p><h4>Others</h4></p>
@@ -63,6 +64,7 @@
 							•	HTML, CSS<br>
 							•	MySQL, PostgresSQL<br>
 							•	Docker, Git<br>
+							•	Selenium<br>
 						
 							</p>
 						<h2><u>Organizations</u></h2>
