--- a/generic.html
+++ b/generic.html
@@ -41,16 +41,23 @@
 							<p><h4>Research Assistant</h4></p>
 							<p>I was a part of the Research and Development team which was developing products around Healthcare and Web3 technologies. Researched a decentralised database GunDB and Radix DLT.
 								Designed Database schema, developed front-end using React and Backend using python and MongoDB</p>
+							
+							<h2>AI4Business Lab SDSU</h2>
+							<p><h4>Research Assistant</h4></p>
+							<p>Worked on Sentiment aware Stock price prediction using LSTM for AI4Business Lab at SDSU.
+								Summarized Covid-19 articles, research papers, and events that affected the Vaccine companies' stock prices. 
+								Analyzed and Visualized Covid-19 vaccine companies' stock prices and people's sentiments using Pandas, NumPy and Seaborn. 
+								Performed stock price forecasting using LSTM.</p>
 								
 							<h2>San Diego State University Research Foundation</h2>
-							<p><h4>Performed time series data analysis using python, streamlit, geoPy and Pandarallel </h4></p>
+							<p><h4>Research Assistant II</h4></p>
 							<p> Developed a web application using Streamlit, Python, Pandas, and NumPy to analyse and monitor 67 million rows of rain and temperature Time Series geospatial data
 								Implemented parallel processing using Swifter and Pandarallel to speed up the data manipulation and cleaning process by 80% Extracted location using geoPy module and visualized geospatial data using Plotly, Altair Charts, and Folium
 								Created bi-directional communication on a folium map using haversine distance to cut down the nearest latitude-longitude search time by 20%, deployed the application with docker container on AWS 
 								</p>
 							<h2>Infosys LTD</h2>
 							<p><h4>Software Development Engineer in Test</h4></p>
-							<p> Coordinated with a team of 5 in developing and testing a banking system, Extracted and imported Essence banks data to MySQL database, conducted automation testing using Selenium web driver and TestNG framework to test the system quality
+							<p> Co-ordinated with a team of 5 in developing and testing a banking system, Extracted and imported Essence banks data to MySQL database, conducted automation testing using Selenium web driver and TestNG framework to test the system quality
 								Designed various test cases and fixed the development bugs in the system
 								Gained knowledge of Java, OOPs, testing tools and frameworks, and SQL database<br>
 								</p>
