--- a/index.html
+++ b/index.html
@@ -37,14 +37,15 @@
 						<IMG class="displayed" src="images/profile1.jpg" height="350" width="270">
 						<div class="inner">
 							<h1>Pooja Yadav</h1>
-							<p> Watching a YouTube video titled ‘Why Machine Learning is the future’ by Sundar Pichai gave me a feeling of consciousness, back in February 2017. 
-								He states that better computational power and access to a lot of relevant data are the two main causes of the progress in ML. Working with data - whether it is data analysis, 
-								or data visualization and emphasizing it with ML algorithms or data storage has always made me feel exhilarating. 
-								My immediate goal after masters is to become a Data Scientist. 
-								In the long run I envision myself becoming a Data Scientist as I am hugely inspired by D J Patil, Former Chief Data Scientist at the White House, 
-								first ever chief data scientist appointed by US government. His markers about striving for curiosity, team building, social and local problem solving always inspire me to crave for becoming a CDS.
-								I am a motivated and a versatile engineer with demonstrated experience in Machine Learning and Data Analysis domain. Experienced in data extraction, developing ML algorithms and developing final predictive model. I believe that I am a strong problem solver, and have excellent communication skills. 
-								I am dedicated to exceeding goals and expectations. 
+							<p align = "justify"> Watching Sundar Pichai talk about ‘Why Machine Learning is the future’ gave me a feeling of consciousness, back in 2017. 
+								'Better computational power and access to a lot of relevant data are the two main causes of the progress in ML' he said.
+								I've always felt this branch of computer science to be exciting, be it data analysis, or data visualization and emphasizing it with ML algorithms 
+								or data storage. My immediate goal after masters is to become a Data Scientist. In the foreseable future, I see myself becoming a Data Scientist 
+								as I am hugely inspired by D J Patil, Former Chief Data Scientist at the White House, first ever chief data scientist appointed by US government. 
+								His pointers about striving for curiosity, team building, social and local problem solving always inspire me to crave for becoming a CDS. 
+								I am a motivated and a versatile engineer with demonstrated experience in Machine Learning and Data Analysis domain. 
+								Experienced in data extraction, developing ML algorithms and developing final predictive model. 
+								I am a strong problem solver, have excellent communication skills and dedicated to exceed goals and expectations. 
 							</p>
 						</div>
 					</section>
@@ -105,17 +106,32 @@
 								<section>
 									<!-- <span class="icon solid major fa-code"></span> -->
 									<h3>Ethio Hydro</h3>
-									<p>Developed a web application using Streamlit, Python, Pandas, and NumPy to analyse and monitor 67 million rows of rain and temperature Time Series geospatial data
-										Implemented parallel processing using Swifter and Pandarallel to speed up the data manipulation and cleaning process by 80% Extracted location using geoPy module and visualized geospatial data using Plotly, Altair Charts, and Folium
-										Created bi-directional communication on a folium map using haversine distance to cut down the nearest latitude-longitude search time by 20%, deployed the application with docker container on AWS .</p>
+									<p align = "justify">Developed a web application to analyse and monitor 67 million rows of rain and temperature Time Series geospatial data.
+										Implemented parallel processing to speed up the data manipulation and cleaning process by 80%. Extracted location and visualized geospatial data.  
+										Created bi-directional communication on a folium map using haversine distance to cut down the latitude-longitude search time by 20% and 
+										deployed the application with docker container.
+										Technologies used: Streamlit, Python, Pandas, NumPy, geoPy, AWS, Swifter, Pandarallel, Plotly, Altair Charts, and Folium
+									</p>
 									<ul class="actions">
 										<li><a href="https://github.com/pooja97/ethio_hydro" class="button scrolly">Learn more</a></li>
 									</ul>
 									</section>
+								
+								<section>
+									<!-- <span class="icon solid major fa-cog"></span> -->
+									<h3>New York City Airbnb Rent prediction</h3>
+									<p align = "justify">Worked with Airbnb historical data from Kaggle to predict it's rent in the NewYork city using Multiple Linear Regression with an accuracy of 55%,
+										performed Exploratory Data Analysis using Pandas, NumPy, and Seaborn. Applied XGBoost to improve the model accuracy from 55% to 85% 
+										Encoded different categorical data using one-hot encoding and treated missing values using mean imputation
+										</p>
+									<ul class="actions">
+										<li><a href="https://github.com/pooja97/Airbnb" class="button scrolly">Learn more</a></li>
+									</ul>
+								</section>
 								<section>
 									<!-- <span class="icon solid major fa-lock"></span> -->
 									<h3>US Covid-19 Data Analysis</h3>
-									<p>Created a dashboard for monitoring Covid-19 cases and deaths in the United States using streamlit, plotly, and plotly express.
+									<p align = "justify">Created a dashboard for monitoring Covid-19 cases and deaths in the United States using streamlit, plotly, and plotly express.
 										Data was collected from the USAfacts.org.
 										 </p>
 									<ul class="actions">
@@ -123,18 +139,10 @@
 									</ul>
 								</section>
 								<section>
-									<!-- <span class="icon solid major fa-cog"></span> -->
-									<h3>New York City Airbnb Rent prediction</h3>
-									<p>Worked with New York city Airbnb historical data. Performed Linear Regression and XGBoost to predict the New York city Airbnb rent with an RMSE value of 63.4</p>
-									<ul class="actions">
-										<li><a href="https://github.com/pooja97/Airbnb" class="button scrolly">Learn more</a></li>
-									</ul>
-								</section>
-								<section>
 									<!-- <span class="icon solid major fa-desktop"></span> -->
 									<h3>Titanic Survival Prediction</h3>
-									<p> Explored the Titanic disaster dataset from Kaggle and applied Logistic Regression to predict the survival of the Titanic passengers
-										Performed Feature Selection, Exploratory Data Analysis, and mean imputation using Pandas and NumPy implemented one-hot encoding, K-fold cross-validation, and Hyperparameter Tuning improving the model accuracy from 62% to 77%
+									<p align = "justify"> Explored the Titanic disaster dataset from Kaggle and applied Logistic Regression to predict the survival of the Titanic passengers
+										performed Feature Selection, Exploratory Data Analysis, and mean imputation using Pandas and NumPy implemented one-hot encoding, K-fold cross-validation, and Hyperparameter Tuning improving the model accuracy from 62% to 77%
 										</p>
 									<ul class="actions">
 										<li><a href="https://github.com/pooja97/titanic" class="button scrolly">Learn more</a></li>
@@ -143,7 +151,8 @@
 								<section>
 									<!-- <span class="icon solid major fa-link"></span> -->
 									<h3>Word Processor</h3>
-									<p>Implemented a Flyweight factory that given a unicode code point returns the Flyweight character object for the character and font. Created RunArray for tracking character.</p>
+									<p align = "justify">Implemented a Word Processor using Flyweight System design pattern in python3, 
+									that given a unicode code point returns the Flyweight character object for the character and font</p>
 									<ul class="actions">
 										<li><a href="https://github.com/pooja97/Word_Processor" class="button scrolly">Learn more</a></li>
 									</ul>
@@ -151,7 +160,7 @@
 								<section>
 									<!-- <span class="icon major fa-gem"></span> -->
 									<h3>In-Memory Database</h3>
-									<p>Explored how to implement In-Memory database in python3 using Command and Memento pattern which helped me understand
+									<p align = "justify">Explored how to implement In-Memory database in python3 using Command and Memento system design pattern which helped me understand
 									   System design pattern in depth.
 									</p>
 									<ul class="actions">
@@ -196,7 +205,7 @@
 										<li>
 											<h3>Email</h3>
 											<a href="mailto: poojayadav2124@gmail.com">poojayadav2124@gmail.com</a><br>
-											<a href="mailto: pyadav5723@sdsu.edu">pyadav5723.edu</a>
+											<a href="mailto: pyadav5723@sdsu.edu">pyadav5723@sdsu.edu</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
