minor changes in work ex. and academics

--- a/elements.html
+++ b/elements.html
@@ -43,6 +43,7 @@
 							•	Altair<br>
 							•	Plotly<br>
 							•	geoPy<br>
+							•	PySpark<br>
 							</p>
 						<p><h4>Software</h4></p>
 						<p>•	Excel<br>
@@ -68,7 +69,7 @@
 						
 							</p>
 						<h2><u>Organizations</u></h2>
-						<p>•	Machine Vision and Perception Lab, San Diego State University, San Diego<br>
+						<p>•	Machine Vision Perception Lab, San Diego State University, San Diego<br>
 							•	AI4Business Lab, San Diego State University, San Diego<br>
 							•	San Diego State University Research Foundation, San Diego
 
