--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<IMG class="displayed" src="images/profile1.jpg" height="350" width="270">
 						<div class="inner">
 							<h1>Pooja Yadav</h1>
-							<p align = "justify"> Watching Sundar Pichai talk about ‘Why Machine Learning is the future’ gave me a feeling of consciousness, back in 2017. 
+							<p style = "font-family:Times New Roman" align = "justify"> Watching Sundar Pichai talk about ‘Why Machine Learning is the future’ gave me a feeling of consciousness, back in 2017. 
 								'Better computational power and access to a lot of relevant data are the two main causes of the progress in ML' he said.
 								I've always felt this branch of computer science to be exciting, be it data analysis, or data visualization and emphasizing it with ML algorithms 
 								or data storage. My immediate goal after masters is to become a Data Scientist. In the foreseable future, I see myself becoming a Data Scientist 
@@ -61,7 +61,7 @@
 									<h3>MASTER OF SCIENCE (MS)</h3>
 									<p>San Diego State University, Computer Science<br>
 									May 2021</p>
-									<h4><u>Subjects</u></h4>
+									<h4><u>Courses</u></h4>
 									<p>Advanced Algorithms (CS-660), Machine Learning (CS-549), Big Data Analytics (CS-649) 
 										Principles and Techniques of Data Science (CS-577), Advanced Object Oreinted Programming (CS-635)
 									</p>
@@ -69,7 +69,7 @@
 									<p>University of Mumbai, Computer Engineering<br>
 										June 2019<br>
 										</p>
-										<h4><u>Subjects</u></h4>
+										<h4><u>Courses</u></h4>
 										<p>Data Mining and Warehousing, Image Processing, Data Structures & Algorithms, Computer Organization & Architecture, Object Oriented Programming, 
 											Advanced Data Structure, Microprocessor, Computer Graphics, Theory of computer Science, Database Management System, Software Engineering, 
 											Computer Networks, Design and Analysis Algorithm 
