--- a/elements.html
+++ b/elements.html
@@ -34,16 +34,20 @@
 						<h1 class="major">Skills and Organizations</h1>
 						<!-- <span class="image fit"><img src="images/DigitalNil.png" alt="" /></span> -->
 						<h2><u>Skills</u></h2>
-						<p><h4>Machine Learning</h4></p>
+						<p><h4>Machine Learning & Computer Vision</h4></p>
 						<p>•	Scikit-Learn<br>
+							•	KMeans<br>
+							•	YOLOv8<br>
+							•	TensorFlow<br>
+							•	Keras<br>
 							•	Numpy<br>
-							•	Matplotlib<br>
 							•	Pandas<br>
-							•	Seaborn<br>
-							•	Altair<br>
-							•	Plotly<br>
-							•	geoPy<br>
-							•	PySpark<br>
+							•	openCV<br>
+							•	Segment Anything Model<br>
+							•	PCA<br>
+							•	Linear Regression<br>
+							•	Logistic Regression<br>
+
 							</p>
 						<p><h4>Software</h4></p>
 						<p>•	Excel<br>
@@ -52,7 +56,12 @@
 							•	Eclipse, VSCode<br>
 							•	Google Colab<br>
 							</p>
-						
+						<p><h4>Data visualization</h4></p>
+						<p> •	Matplotlib<br>
+							•	Seaborn<br>
+							•	Altair<br>
+							•	Plotly<br>
+						</p>
 						<p><h4>AWS</h4></p>
 						<p>•	EC2<br>
 							•	S3<br>
@@ -66,6 +75,8 @@
 							•	MySQL, PostgresSQL<br>
 							•	Docker, Git<br>
 							•	Selenium<br>
+							•	geoPy<br>
+							•	PySpark<br>
 						
 							</p>
 						<h2><u>Organizations</u></h2>
