--- a/generic.html
+++ b/generic.html
@@ -34,7 +34,7 @@
 							<h1 class="major">Internship & Work Experience</h1>
 							<!-- <span class="image fit"><img src="images/DigitalNil.png" alt="" /></span> -->
 							<h2>MVP Lab SDSU</h2>
-							<p><h4>Research Assistant</h4></p>
+							<p><h4>Machine Learning Engineer</h4></p>
 							<p>I am a part of the Computer Vision and deep learning team. This project is specifically focussed towards 
 								analysing the data sets related to housing and real estate industry and we used clustering as well as segmentation to extract meaning out of image data.</p>
 
@@ -43,7 +43,7 @@
 							<p>Teaching Assistant for the course Wireless Networks (CS-578)</p>
 
 							<h2>LifeBand LLC</h2>
-							<p><h4>Research Assistant</h4></p>
+							<p><h4>Software Engineer Intern</h4></p>
 							<p>I was a part of the Research and Development team which was developing products around Healthcare and Web3 technologies. Researched solving healthcare industry problems using decentralized systems and Web3 technologies.
 								Designed and implemented relational database schema and gathered requirements for a high-level system design. Developed a minimal viable product with front-end using React Native and Backend using MongoDB</p>
 							
@@ -55,13 +55,13 @@
 								Performed stock price forecasting using LSTM.</p>
 								
 							<h2>San Diego State University Research Foundation</h2>
-							<p><h4>Research Assistant II</h4></p>
+							<p><h4>Data Analyst Intern</h4></p>
 							<p> Developed a web application using Streamlit, Python, Pandas, and NumPy to analyse and monitor 67 million rows of rain and temperature Time Series geospatial data.
 								Implemented parallel processing using Swifter and Pandarallel to speed up the data manipulation and cleaning process by 80% Extracted location using geoPy module and visualized geospatial data using Plotly, Altair Charts, and Folium.
 								Created bi-directional communication on a folium map using haversine distance to cut down the nearest latitude-longitude search time by 20%, deployed the application with docker container on AWS. 
 								</p>
 							<h2>Infosys LTD</h2>
-							<p><h4>Software Development Engineer in Test</h4></p>
+							<p><h4>Software Development Engineer</h4></p>
 							<p> Co-ordinated with a team of 5 in developing and testing a banking system, Extracted and imported Essence banks data to MySQL database, conducted automation testing using Selenium web driver and TestNG framework to test the system quality.
 								Designed various test cases and fixed the development bugs in the system.
 								Gained knowledge of Java, OOPs, testing tools and frameworks, and SQL database<br>
