--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 								'Better computational power and access to a lot of relevant data are the two main causes of the progress in ML' he said.
 								I've always felt this branch of computer science to be exciting, be it data analysis, or data visualization and emphasizing it with ML algorithms 
 								or data storage. My immediate goal after masters is to become a Data Scientist. In the foreseable future, I see myself becoming a Data Scientist 
-								as I am hugely inspired by D J Patil, Former Chief Data Scientist at the White House, first ever chief data scientist appointed by US government. 
+								as I am highly inspired by D J Patil, Former Chief Data Scientist at the White House, first ever chief data scientist appointed by US government. 
 								His pointers about striving for curiosity, team building, social and local problem solving always inspire me to crave for becoming a CDS. 
 								I am a motivated and a versatile engineer with demonstrated experience in Machine Learning and Data Analysis domain. 
 								Experienced in data extraction, developing ML algorithms and developing final predictive model. 
@@ -60,19 +60,21 @@
 									<p>Academics not only helps us get new and better jobs but also brings out the positive potentials within us.</p>
 									<h3>MASTER OF SCIENCE (MS)</h3>
 									<p>San Diego State University, Computer Science<br>
-									May 2023</p>
+									Aug 2023</p>
 									<h4><u>Courses</u></h4>
-									<p>Advanced Algorithms (CS-660), Machine Learning (CS-549), Big Data Analytics (CS-649) 
-										Principles and Techniques of Data Science (CS-577), Advanced Object Oreinted Programming (CS-635)
+									<p> Advanced Algorithms (CS-660), Machine Learning (CS-549), Big Data Analytics (CS-649) 
+										Principles and Techniques of Data Science (CS-577), Advanced Object Oriented Programming (CS-635),
+										Research (CS-797)
 									</p>
 									<h3>BACHELOR OF ENGINEERING (BE)</h3>
 									<p>University of Mumbai, Computer Engineering<br>
 										June 2019<br>
 										</p>
 										<h4><u>Courses</u></h4>
-										<p>Data Mining and Warehousing, Image Processing, Data Structures & Algorithms, Computer Organization & Architecture, Object Oriented Programming, 
-											Advanced Data Structure, Microprocessor, Computer Graphics, Theory of computer Science, Database Management System, Software Engineering, 
-											Computer Networks, Design and Analysis Algorithm 
+										<p> Data Structures & Algorithms, Operations Research, Data Mining and Warehousing, 
+											Image Processing, Computer Organization & Architecture, Object Oriented Programming,
+											Computer Graphics, Theory of computer Science, Database Management System, 
+											Software Engineering, Computer Networks, Design and Analysis Algorithm 
 										</p>
 								</div>
 							</div>
