Some skills updation

--- a/elements.html
+++ b/elements.html
@@ -58,9 +58,11 @@
 							</p>
 						<p><h4>Data visualization</h4></p>
 						<p> •	Matplotlib<br>
+							•	Tableau<br>
 							•	Seaborn<br>
 							•	Altair<br>
 							•	Plotly<br>
+
 						</p>
 						<p><h4>AWS</h4></p>
 						<p>•	EC2<br>
