--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
 								<section>
 									<!-- <span class="icon solid major fa-lock"></span> -->
 									<h3>US Covid-19 Data Analysis</h3>
-									<p align = "justify">Created a dashboard for monitoring Covid-19 cases and deaths in the United States using streamlit, plotly, and plotly express.
-										Data was collected from the USAfacts.org.
+									<p align = "justify">Analyzed the COVID-19 data for the United States, using PySpark and Linear Regression on various parameters and 
+										utilized the animation feature of Tableau to visualize the state-wise weekly new cases and deaths. 										
 										 </p>
 									<ul class="actions">
 										<li><a href="https://github.com/pooja97/US-Covid-19" class="button scrolly">Learn more</a></li>
