Project and Skill updation

--- a/generic.html
+++ b/generic.html
@@ -34,7 +34,7 @@
 							<h1 class="major">Internship & Work Experience</h1>
 							<!-- <span class="image fit"><img src="images/DigitalNil.png" alt="" /></span> -->
 							<h2>MVP Lab SDSU</h2>
-							<p><h4>Machine Learning Engineer</h4></p>
+							<p><h4>Research Associate: Machine Learning Engineer</h4></p>
 							<p>I am a part of the Computer Vision and deep learning team. This project is specifically focussed towards 
 								analysing the data sets related to housing and real estate industry and we used clustering as well as segmentation to extract meaning out of image data.</p>
 
@@ -45,11 +45,11 @@
 							<h2>LifeBand LLC</h2>
 							<p><h4>Software Engineer Intern</h4></p>
 							<p>I was a part of the Research and Development team which was developing products around Healthcare and Web3 technologies. Researched solving healthcare industry problems using decentralized systems and Web3 technologies.
-								Designed and implemented relational database schema and gathered requirements for a high-level system design. Developed a minimal viable product with front-end using React Native and Backend using MongoDB</p>
+								Designed and implemented relational database schema and gathered requirements for a high-level system design. Developed a minimal viable product with front-end using React Native and Backend using MongoDB with a CI/CD using BitBucket.</p>
 							
 							<h2>AI4Business Lab SDSU</h2>
 							<p><h4>Research Assistant</h4></p>
-							<p>Worked on Sentiment aware Stock price prediction using LSTM for AI4Business Lab at SDSU.
+							<p> Extracted Covid-19 Twitter data using tweepy to predcit the Covid-19 vaccine company's stock prices based on the Twitter user's sentiments. 
 								Summarized Covid-19 articles, research papers, and events that affected the Vaccine companies' stock prices. 
 								Analyzed and Visualized Covid-19 vaccine companies' stock prices and people's sentiments using Pandas, NumPy and Seaborn. 
 								Performed stock price forecasting using LSTM.</p>
