--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
 									<!-- <span class="icon solid major fa-lock"></span> -->
 									<h3>US Covid-19 Data Analysis</h3>
 									<p align = "justify">Analyzed the COVID-19 data for the United States, using PySpark and Linear Regression on various parameters and 
-										utilized the animation feature of Tableau to visualize the state-wise weekly new cases and deaths. 										
+										utilized the animation feature of Tableau to visualize the state-wise weekly new cases and deaths. 
+										Worked with the geoJson file to colorcode the United States map according to the weekly cases. 										
 										 </p>
 									<ul class="actions">
 										<li><a href="https://github.com/pooja97/US-Covid-19" class="button scrolly">Learn more</a></li>
