--- a/elements.html
+++ b/elements.html
@@ -64,13 +64,23 @@
 							•	Plotly<br>
 
 						</p>
-						<p><h4>AWS</h4></p>
-						<p>•	EC2<br>
+						<p><h4>Cloud Technologies</h4></p>
+						<p> AWS
+						<p> •   EC2<br>
 							•	S3<br>
 							•	ECR<br>
 							•	ECS<br>
 							•	QuickSight<br>
 							</p>
+						</p>
+						<p>GCP
+							<p>
+								•   Cloud Storage<br>
+								•   Compute Engine<br>
+								•   BigQuery<br>
+								•   Looker<br>
+							</p>
+						</p>
 						<p><h4>Others</h4></p>
 						<p>•	Java, Python<br>
 							•	HTML, CSS<br>
