added uber data analytics

--- a/index.html
+++ b/index.html
@@ -160,6 +160,19 @@
 										<li><a href="https://github.com/pooja97/in-memory-db" class="button scrolly">Learn more</a></li>
 									</ul>
 								</section>
+								<section>
+									<!-- <span class="icon major fa-gem"></span> -->
+									<h3>Uber Data Analytics</h3>
+									<p align = "justify">
+										Modeled and Implemented an ETL pipeline utilizing Python, Google Compute Engine, and mage-ai to efficiently extract, transform, and load Uber data into BigQuery. 
+										Created  an interactive Looker Studio dashboard to perform an in-depth analysis of Uber data based on different parameters.
+										Implemented filters and drill-down capabilities, enhancing user experience and enabling rapid trend identification and opportunities for optimization
+									</p>
+									<ul class="actions">
+										<li><a href="https://github.com/pooja97/in-memory-db" class="button scrolly">Learn more</a></li>
+									</ul>
+								</section>
+
 								
 							</div>
 							<ul class="actions">
