Work ex updation

--- a/generic.html
+++ b/generic.html
@@ -35,8 +35,11 @@
 							<!-- <span class="image fit"><img src="images/DigitalNil.png" alt="" /></span> -->
 							<h2>MVP Lab SDSU</h2>
 							<p><h4>Research Associate: Machine Learning Engineer</h4></p>
-							<p>I am a part of the Computer Vision and deep learning team. This project is specifically focussed towards 
-								analysing the data sets related to housing and real estate industry and we used clustering as well as segmentation to extract meaning out of image data.</p>
+							<p>Enhanced an AI-based real estate service at Computer Vision Lab SDSU to rate 1.2 million housing communities in San Diego.
+								Automated and accelerated the collection of Google Street View data by 40% using Selenium, Python, and OpenCV for efficient preprocessing.
+								Trained a YOLOv8 model on custom data to detect roadways, utilized Segment Anything Model by Meta to segment YOLOv8 model’s detection reducing the segmentation time by 55%.
+								Applied pre-trained VGG16 for feature extraction, Principal Component Analysis for dimensionality reduction, and KMeans clustering to cluster and rate image data into ten distinct groups based on the extracted features. Performed 3D cluster analysis using Seaborn and Plotly.js
+								Analyzed Elbow graph to find the optimal value for K and calculated Silhouette score for each cluster to find the quality of the cluster.</p>
 
 							<h2>San Diego State University</h2>
 							<p><h4>Teaching Assistant</h4></p>
@@ -44,8 +47,9 @@
 
 							<h2>LifeBand LLC</h2>
 							<p><h4>Software Engineer Intern</h4></p>
-							<p>I was a part of the Research and Development team which was developing products around Healthcare and Web3 technologies. Researched solving healthcare industry problems using decentralized systems and Web3 technologies.
-								Designed and implemented relational database schema and gathered requirements for a high-level system design. Developed a minimal viable product with front-end using React Native and Backend using MongoDB with a CI/CD using BitBucket.</p>
+							<p>Collaborated in formulating a robust database schema with 15 tables, adhering to third normal form (3NF) for enhanced data integrity.
+								Implemented streamlined software development processes with a BitBucket CI/CD pipelines, improving deployment frequency by 25%.
+								Designed and developed a minimal variable product with a React front-end and a Django back-end, created seamless API integration using the Django-Rest framework, and efficiently orchestrated daily updates with airflow DAGs.</p>
 							
 							<h2>AI4Business Lab SDSU</h2>
 							<p><h4>Research Assistant</h4></p>
@@ -62,9 +66,10 @@
 								</p>
 							<h2>Infosys LTD</h2>
 							<p><h4>Software Development Engineer</h4></p>
-							<p> Co-ordinated with a team of 5 in developing and testing a banking system, Extracted and imported Essence banks data to MySQL database, conducted automation testing using Selenium web driver and TestNG framework to test the system quality.
-								Designed various test cases and fixed the development bugs in the system.
-								Gained knowledge of Java, OOPs, testing tools and frameworks, and SQL database<br>
+							<p> Engineered a comprehensive banking system, seamlessly interfacing with a MySQL database to enhance data management.
+								Developed and deployed over 10 RESTful APIs and automation scripts using Python and Selenium, reducing manual work by 90%.
+								Enhanced system performance by resolving development issues, achieving a 20% performance increase through load testing.
+								Collaborated in Agile Software Development and code reviews to maintain code quality, achieving test coverage above 80%<br>
 								</p>
 
 						</div>
