--- a/elements.html
+++ b/elements.html
@@ -45,6 +45,7 @@
 							•	openCV<br>
 							•	Segment Anything Model<br>
 							•	PCA<br>
+							•	XGBoost<br>
 							•	Linear Regression<br>
 							•	Logistic Regression<br>
 
@@ -70,7 +71,11 @@
 							•	S3<br>
 							•	ECR<br>
 							•	ECS<br>
+							•	Glue<br>
+							•	Lambda<br>
+							•	Athena<br>
 							•	QuickSight<br>
+
 							</p>
 						</p>
 						<p>GCP
@@ -89,6 +94,7 @@
 							•	Selenium<br>
 							•	geoPy<br>
 							•	PySpark<br>
+							•	AirFlow<br>
 						
 							</p>
 						<h2><u>Organizations</u></h2>
