--- a/generic.html
+++ b/generic.html
@@ -33,6 +33,10 @@
 						<div class="inner">
 							<h1 class="major">Internship & Work Experience</h1>
 							<!-- <span class="image fit"><img src="images/DigitalNil.png" alt="" /></span> -->
+							<h2>Getinge</h2>
+							<p><h4>Data Engineer Intern</h4></p>
+							<p>Currently working as a Azure Data Engineer Intern at Getinge a medical device manufacturing company.</p>
+
 							<h2>MVP Lab SDSU</h2>
 							<p><h4>Research Associate: Machine Learning Engineer</h4></p>
 							<p>Enhanced an AI-based real estate service at Computer Vision Lab SDSU to rate 1.2 million housing communities in San Diego.
@@ -47,9 +51,10 @@
 
 							<h2>LifeBand LLC</h2>
 							<p><h4>Software Engineer Intern</h4></p>
-							<p>Collaborated in formulating a robust database schema with 15 tables, adhering to third normal form (3NF) for enhanced data integrity.
-								Implemented streamlined software development processes with a BitBucket CI/CD pipelines, improving deployment frequency by 25%.
-								Designed and developed a minimal variable product with a React front-end and a Django back-end, created seamless API integration using the Django-Rest framework, and efficiently orchestrated daily updates with airflow DAGs.</p>
+							<p>Orchestrated a 40% reduction in daily data processing time by efficient data ingestion through Airflow DAGs for a robust 3NF-compliant database schema, ensuring data integrity in collaboration with the cross-functional teams.
+								Designed and Developed REST APIs using the Django-Rest framework and PostgreSQL database, ensuring seamless and robust data interaction for optimal system performance
+								Spearheaded the implementation of streamlined software development processes with BitBucket CI/CD, resulting in a 50% reduction in deployment time
+								</p>
 							
 							<h2>AI4Business Lab SDSU</h2>
 							<p><h4>Research Assistant</h4></p>
@@ -66,10 +71,11 @@
 								</p>
 							<h2>Infosys LTD</h2>
 							<p><h4>Software Development Engineer</h4></p>
-							<p> Engineered a comprehensive banking system, seamlessly interfacing with a MySQL database to enhance data management.
-								Developed and deployed over 10 RESTful APIs and automation scripts using Python and Selenium, reducing manual work by 90%.
-								Enhanced system performance by resolving development issues, achieving a 20% performance increase through load testing.
-								Collaborated in Agile Software Development and code reviews to maintain code quality, achieving test coverage above 80%<br>
+							<p> Achieved a 90% reduction in manual work by developing and deploying over 10 RESTful APIs and automation scripts using Python and Selenium for a scalable banking system interfacing seamlessly with a MySQL database.
+								Enhanced system performance by resolving development issues, achieving a 20% system performance increase.
+								Contributed in optimizing continuous integration and deployment workflows, integrating Selenium, JUnit, and TestNG for thorough software testing, resulting in an increased system reliability by 30% 
+								Collaborated in Agile Software Development and code reviews to maintain code quality and test coverage above 80%
+								<br>
 								</p>
 
 						</div>
