--- a/elements.html
+++ b/elements.html
@@ -66,6 +66,12 @@
 
 						</p>
 						<p><h4>Cloud Technologies</h4></p>
+						<p> Azure
+							<p> •   Databricks<br>
+								•	ADLS Gen2<br>
+								•	Synapse<br>
+								</p>
+							</p>
 						<p> AWS
 						<p> •   EC2<br>
 							•	S3<br>
@@ -89,7 +95,7 @@
 						<p><h4>Others</h4></p>
 						<p>•	Java, Python<br>
 							•	HTML, CSS<br>
-							•	MySQL, PostgresSQL<br>
+							•	MySQL, PostgresSQL, SQlServer<br>
 							•	Docker, Git<br>
 							•	Selenium<br>
 							•	geoPy<br>
