--- a/generic.html
+++ b/generic.html
@@ -34,8 +34,12 @@
 							<h1 class="major">Internship & Work Experience</h1>
 							<!-- <span class="image fit"><img src="images/DigitalNil.png" alt="" /></span> -->
 							<h2>Getinge</h2>
-							<p><h4>Data Engineer Intern</h4></p>
-							<p>Currently working as a Azure Data Engineer Intern at Getinge a medical device manufacturing company.</p>
+							<p><h4>Data Engineer </h4></p>
+							<p>Azure Data Engineer at Getinge a medical device manufacturing company.
+								Orchestrating an end-to-end data ingestion and transformation using Rest APIs, Azure Databricks with Medallion architecture, and ADLS Gen 2, optimizing workflows for efficient creation of vector embeddings fed into a chatbot system leveraging LLMs.
+								Designed asynchronous API request calls with a rate-limiting mechanism using a Token bucket algorithm. 
+								Building and maintaining robust data pipelines in Azure Synapse, ensuring seamless data ingestion from diverse on-prem source systems into Data Lake and PostgreSQL ensuring data quality standards.Orchestrating an end-to-end data ingestion and transformation using Rest APIs, Azure Databricks with Medallion architecture, and ADLS Gen 2, optimizing workflows for efficient creation of vector embeddings fed into a chatbot system leveraging LLMs. Designed asynchronous API request calls with a rate-limiting mechanism using a Token bucket algorithm. 
+							</p>
 
 							<h2>MVP Lab SDSU</h2>
 							<p><h4>Research Associate: Machine Learning Engineer</h4></p>
@@ -70,11 +74,10 @@
 								Created bi-directional communication on a folium map using haversine distance to cut down the nearest latitude-longitude search time by 20%, deployed the application with docker container on AWS. 
 								</p>
 							<h2>Infosys LTD</h2>
-							<p><h4>Software Development Engineer</h4></p>
-							<p> Achieved a 90% reduction in manual work by developing and deploying over 10 RESTful APIs and automation scripts using Python and Selenium for a scalable banking system interfacing seamlessly with a MySQL database.
-								Enhanced system performance by resolving development issues, achieving a 20% system performance increase.
-								Contributed in optimizing continuous integration and deployment workflows, integrating Selenium, JUnit, and TestNG for thorough software testing, resulting in an increased system reliability by 30% 
-								Collaborated in Agile Software Development and code reviews to maintain code quality and test coverage above 80%
+							<p><h4>Data Engineer</h4></p>
+							<p> Achieved 75% improvement in data transfer efficiency by orchestrating and implementing a high-throughput data ingestion pipeline using Kafka streaming, enhancing the data storage speed in Snowflake
+								Developed Python scripts to optimize data retrieval from REST APIs, increasing the pipeline's data source efficiency
+								Implemented Airflow for job scheduling, achieving 30% manual work reduction and automated, timely data processing
 								<br>
 								</p>
 
