--- a/generic.html
+++ b/generic.html
@@ -33,6 +33,13 @@
 						<div class="inner">
 							<h1 class="major">Internship & Work Experience</h1>
 							<!-- <span class="image fit"><img src="images/DigitalNil.png" alt="" /></span> -->
+							<h2>IFF,Inc</h2>
+							<p><h4>Scientist I</h4></p>
+							<p>neered data solutions to optimize high-throughput screening workflows in chemistry R&D, improving efficiency by 20% and ensuring accurate, structured data collection for chemical experiments
+								Developed scalable database architectures to process 1M+ experimental data points from diverse chemical experiments, ensuring efficient data storage, retrieval, and integrity enhancing data accessibility for cross-functional teams
+								Automated 80% of data pipelines, reducing manual intervention and accelerating data processing by 30%
+								Built and deployed web applications for real-time data analysis, improving data reporting efficiency for R&D by 40%
+							</p>
 							<h2>Getinge</h2>
 							<p><h4>Data Engineer </h4></p>
 							<p>Azure Data Engineer at Getinge a medical device manufacturing company.
