--- a/generic.html
+++ b/generic.html
@@ -20,7 +20,7 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html" class="active">Internships</a></li>
+						<li><a href="generic.html" class="active">Work Experience</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -31,7 +31,7 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">Internship & Work Experience</h1>
+							<h1 class="major">Work Experience</h1>
 							<!-- <span class="image fit"><img src="images/DigitalNil.png" alt="" /></span> -->
 							<h2>International Flavors & Fragrances, Inc</h2>
 							<p><h4>Scientist I</h4></p>
@@ -56,30 +56,13 @@
 								Applied pre-trained VGG16 for feature extraction, Principal Component Analysis for dimensionality reduction, and KMeans clustering to cluster and rate image data into ten distinct groups based on the extracted features. Performed 3D cluster analysis using Seaborn and Plotly.js
 								Analyzed Elbow graph to find the optimal value for K and calculated Silhouette score for each cluster to find the quality of the cluster.</p>
 
-							<h2>San Diego State University</h2>
-							<p><h4>Teaching Assistant</h4></p>
-							<p>Teaching Assistant for the course Wireless Networks (CS-578)</p>
-
 							<h2>LifeBand LLC</h2>
 							<p><h4>Software Engineer Intern</h4></p>
 							<p>Orchestrated a 40% reduction in daily data processing time by efficient data ingestion through Airflow DAGs for a robust 3NF-compliant database schema, ensuring data integrity in collaboration with the cross-functional teams.
 								Designed and Developed REST APIs using the Django-Rest framework and PostgreSQL database, ensuring seamless and robust data interaction for optimal system performance
 								Spearheaded the implementation of streamlined software development processes with BitBucket CI/CD, resulting in a 50% reduction in deployment time
 								</p>
-							
-							<h2>AI4Business Lab SDSU</h2>
-							<p><h4>Research Assistant</h4></p>
-							<p> Extracted Covid-19 Twitter data using tweepy to predcit the Covid-19 vaccine company's stock prices based on the Twitter user's sentiments. 
-								Summarized Covid-19 articles, research papers, and events that affected the Vaccine companies' stock prices. 
-								Analyzed and Visualized Covid-19 vaccine companies' stock prices and people's sentiments using Pandas, NumPy and Seaborn. 
-								Performed stock price forecasting using LSTM.</p>
 								
-							<h2>San Diego State University Research Foundation</h2>
-							<p><h4>Data Analyst Intern</h4></p>
-							<p> Developed a web application using Streamlit, Python, Pandas, and NumPy to analyse and monitor 67 million rows of rain and temperature Time Series geospatial data.
-								Implemented parallel processing using Swifter and Pandarallel to speed up the data manipulation and cleaning process by 80% Extracted location using geoPy module and visualized geospatial data using Plotly, Altair Charts, and Folium.
-								Created bi-directional communication on a folium map using haversine distance to cut down the nearest latitude-longitude search time by 20%, deployed the application with docker container on AWS. 
-								</p>
 							<h2>Infosys LTD</h2>
 							<p><h4>Data Engineer</h4></p>
 							<p> Achieved 75% improvement in data transfer efficiency by orchestrating and implementing a high-throughput data ingestion pipeline using Kafka streaming, enhancing the data storage speed in Snowflake
