--- a/elements.html
+++ b/elements.html
@@ -56,6 +56,8 @@
 							•	Jupyter, Anaconda<br>
 							•	Eclipse, VSCode<br>
 							•	Google Colab<br>
+							•	KNIME<br>
+
 							</p>
 						<p><h4>Data visualization</h4></p>
 						<p> •	Matplotlib<br>
@@ -93,9 +95,9 @@
 							</p>
 						</p>
 						<p><h4>Others</h4></p>
-						<p>•	Java, Python<br>
+						<p>•	Java, Python, JavaScript<br>
 							•	HTML, CSS<br>
-							•	MySQL, PostgresSQL, SQlServer<br>
+							•	MySQL, PostgresSQL, SQlServer, Oracle<br>
 							•	Docker, Git<br>
 							•	Selenium<br>
 							•	geoPy<br>
