--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">About Me</a></li>
-							<li><a href="#one">Academics & Internship</a></li>
+							<li><a href="#one">Academics & Work Experiences</a></li>
 							<li><a href="#two">Projects</a></li>
 							<li><a href="#three">Skills & Organizations</a></li>
 							<li><a href="#four">Get in touch</a></li>
