--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 							<!-- <a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a> -->
 							<div class="content">
 								<div class="inner">
-									<h2>Internships</h2>
-									<p>Internships give the first hand exposure working in the real world. It allows us to implement skill, knowlegde and
+									<h2>Work Experience</h2>
+									<!-- <p>Internships give the first hand exposure working in the real world. It allows us to implement skill, knowlegde and
 										the theoretical practice learnt before. I beleive that it is a learning curve with little experience of the professional world.
-										</p>
+										</p> -->
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
