--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Academics</h2>
-									<p>Academics not only helps us get new and better jobs but also brings out the positive potentials within us.</p>
 									<h3>MASTER OF SCIENCE (MS)</h3>
 									<p>San Diego State University, Computer Science<br>
 									Aug 2023</p>
@@ -187,10 +186,9 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Skills & Organizations</h2>
-									<p>Skills are a important aspect of a person's career as they define your ability in your domain. In my opinion, with skills and 
-										knowledge, socializing is also an important aspect. Throughout my academic career, I have joined a lot of labs and organizations 
+									<p>Skills are a important aspect of a person's career as they define your ability in your domain. Throughout my academic career, I have joined a lot of labs and organizations 
 										for improving my self confidence, public speaking and networking. Technical as well as Non- technical knowledge are important when 
-										it comes to thriving in the society. Here are a few of my skills and the organizations that I have joined uptil now.
+										it comes to thriving in the society. 
 									</p>
 										<ul class="actions">
 										<li><a href="elements.html" class="button">Learn more</a></li>
@@ -212,10 +210,6 @@
 											<h3>Email</h3>
 											<a href="mailto: poojayadav2124@gmail.com">poojayadav2124@gmail.com</a><br>
 											<a href="mailto: pyadav5723@sdsu.edu">pyadav5723@sdsu.edu</a>
-										</li>
-										<li>
-											<h3>Phone</h3>
-											<a href="tel:+1-858-833-8979">+1(858) 833-8979</a><br>
 										</li>
 										<li>
 											<h3>Social</h3>
